tests/syntax_error/struct_default.jou
struct Foo:
    num: int = 1  # Error: struct fields cannot have default values
